2007-06-22  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_access/pam_access.c: Add new syntax for groups
	in access.conf to differentiate group names from account names.
	Based on patch from Julien Lecomte <julien@famille-lecomte.net>,
	solves feature request [#411390].
	* modules/pam_access/access.conf: Add example for new group
	syntax.
	* modules/pam_access/access.conf.5.xml: Document new syntax.

2007-06-20  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_cracklib/pam_cracklib.8.xml: Document new minclass
	option.
	* modules/pam_cracklib/pam_cracklib.c: Add support for minimum
	character classes [#1688777]. Based on patch from Keith Schincke.

	* xtests/tst-pam_cracklib2.c: New, test case for minclass option.
	* xtests/tst-pam_cracklib2.pamd: New, PAM config file for test case.
	* xtests/Makefile.am: Add new testcase.

	* xtests/pam_cracklib.c: Fix comment what this application tests.

	* configure.in: Use /lib64 on x86-64, ppc64, s390x, sparc64

2007-06-15  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_selinux/pam_selinux.8.xml: Remove multiple option,
	add select_context and use_current_range options.
	* modules/pam_selinux/pam_selinux.c (send_audit_message): Added
	function for auditing role/level changes.
	(query_response): Add default response.
	(select_context): Removed.
	(manual_context): Query only role and level.
	(mls_range_allowed): Added function for range check.
	(config_context): Added function for role and level override.
	(pam_sm_open_session): Remove multiple option, add select_context
	and use_current_range_options. Use getseuserbyname to obtain
	SELinux user and level. Audit role/level changes. Call setkeycreatecon
	to assign key creation context. Don't fail on errors when SELinux
	is not in enforcing mode.
	* configure.in: Check for setkeycreatecon().

	* modules/pam_namespace/README.xml: Avoid duplication of
	documentation.
	* modules/pam_namespace/namespace.conf: More real life example
	from MLS support.